# CMakeFortranTemplate

./: CMakeLists.txt  LICENSE  README.md
.github/workflows/: main.yml
sample/: CMakeLists.txt
sample/HelloWorldSample/: CMakeLists.txt  HelloWorldSample.f90
src/HelloWorld/: CMakeLists.txt  HelloWorld.f90
